# snake-2D

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  run.sh  vcpkg.json
include/: CollisionObserver.hpp  ErrorHandler.hpp  FontManager.hpp  Game.hpp  GameObject.hpp  GameOver.hpp  GamePlay.hpp  GameState.hpp  Grid.hpp  InputDetector.hpp  MainMenu.hpp  PauseMenu.hpp  Player.hpp  Texture.hpp  UILabel.hpp  Vector.hpp
src/: FontManager.cpp  Game.cpp  GameObject.cpp  GameOver.cpp  Gameplay.cpp  Grid.cpp  InputManager.cpp  MainMenu.cpp  PauseMenu.cpp  Player.cpp  StatesManager.cpp  Texture.cpp  UILabel.cpp  Vector.cpp  main.cpp
